# ECP-ZKB

./: CMakeLists.txt  README.md  cpucycles.c  fastrandombytes.c  gaussian_avx.c  gaussian_avx.h  hash.c  hash.h  keygen.c  keygen.h  littleendian.h  main.c  param.h  poly_mult.c  poly_q.c  poly_q.h  poly_red.h  randombytes.c  sammat.c  sampleb.c  sampleb.h  setup.c  signature.c  signature.h  verify.c  verify.h
